--- a/index.html
+++ b/index.html
@@ -6,7 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <h1>meu código</h1>
+<body> 
+   <main class="card">
+        <div class="my-informations"></div>
+            <img src="./src/imagens/foto-perfil.jpg" alt="foto de perfil">
+            <h1 class="nome">Wesley Alves Lima</h1>
+            <h2 class="cargo">Desenvolvedor Full Stack Pleno</h2>
+        <div class="content">
+            <ul class="tabs">
+                <li class="tab">
+                    <img src="./src/imagens/sobre.gif" alt="ícone sobre mim">
+                </li>
+                <li class="tab">
+                    <img src="./src/imagens/coracao.gif" alt="ícone redes sociais">
+                </li>
+            </ul>
+
+            <div class="informations-tabs">
+            </div>
+        </div>
+   </main>
 </body>
 </html>
