added fonts, image, tab informations.

--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+    <title>Mini Portfólio</title>
 </head>
-<body> 
-   <main class="card">
+
+<body>
+    <main class="card">
         <div class="my-informations"></div>
-            <img src="./src/imagens/foto-perfil.jpg" alt="foto de perfil">
-            <h1 class="nome">Wesley Alves Lima</h1>
-            <h2 class="cargo">Desenvolvedor Full Stack Pleno</h2>
+        <img src="./src/imagens/foto-perfil.jpg" alt="foto de perfil">
+        <h1 class="nome">Wesley Alves Lima</h1>
+        <h2 class="cargo">Desenvolvedor Full Stack Pleno</h2>
         <div class="content">
             <ul class="tabs">
                 <li class="tab">
@@ -23,8 +28,40 @@
             </ul>
 
             <div class="informations-tabs">
+                <div class="information">
+                    <h3 class="sub-titulo">Sobre</h3>
+
+                    <div class="description">
+                        <p>Oi! meu nome é Wesley Alves, seja bem-vindo(a)!</p>
+                        <p>
+                            Sou uma pessoa apaixonada pela programação desde que eu tinha 15
+                            anos. Sempre tive o sonho de trabalhar com programação e
+                            atualmente comecei a colocar esse sonho em prática estudando
+                            <span>HTML, CSS e JavaScript.</span>
+                            Gosto muito de café (até demais), e meus principais hobbies são
+                            jogar MMO RPG, ver animes e séries.
+                        </p>
+                    </div>
+
+                    <div class="information">
+                        <h3 class="sub-titulo">Minhas redes</h3>
+                        <ul class="redes-sociais">
+                            <li>
+                                <a href="https://www.linkedin.com/in/wesley-alves-225071174/" target="_blank"
+                                    class="curriculo">Curriculo</a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/wess223" target="_blank" class="linkedIn">LinkedIn</a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/wess223" target="_blank" class="github">GitHub</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
-   </main>
+    </main>
 </body>
+
 </html>
