added img profile

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 
 <body>
     <main class="card">
-
         <div class="my-informations">
-            <img src="./src/imagens/foto-perfil.jpg" alt="foto de perfil">
+            <img src="./src/imagens/profile.jpg" alt="foto de perfil">
             <h1 class="nome">Wesley Alves Lima</h1>
             <h2 class="cargo">Desenvolvedor Full Stack Pleno</h2>
         </div>
