writing my about

--- a/index.html
+++ b/index.html
@@ -40,12 +40,24 @@
                         <p>Oi! meu nome é Wesley Alves, seja bem-vindo(a)!</p>
                         <p>
                             Sou uma pessoa apaixonada pela programação desde que eu tinha 15
-                            anos. Sempre tive o sonho de trabalhar com programação e
-                            atualmente comecei a colocar esse sonho em prática estudando
-                            <span>HTML, CSS e JavaScript.</span>
-                            Gosto muito de café (até demais), e meus principais hobbies são
-                            jogar MMO RPG, ver animes e séries.
+                            anos. Sempre tive o sonho de trabalhar com programação, logo comecei a colocar esse sonho em
+                            prática estudando <span>HTML, CSS e JavaScript.</span>
                         </p>
+                        <p>
+                            Iniciei minha jornada no mundo da tecnologia na Universidade Estácio de sá no curso de
+                            Análise e desenvolvimento de sistemas.👩‍💻
+                        </p>
+                        <p>
+                            Logo mais ingressando em um estágio trabalhando com as
+                            tecnologias microsoft <span>.Net, C#, asp.net MVC e sqlserver.</span>
+                            Com muito esforço e dedicação hoje sigo minha profissão como desenvolvedor full stack.<span>(reactjs, nextjs, react native, .Net, SqlServer.)</span>
+                            
+                            meus principais hobbies são
+                            jogar MMO RPG, tibia e ver animes e séries.
+                            <br />
+                            <i>E isso é só o começo.✨</i>
+                        </p>
+                        
                     </div>
                 </div>
 
@@ -57,7 +69,8 @@
                                 class="curriculo">Curriculo</a>
                         </li>
                         <li>
-                            <a href="https://github.com/wess223" target="_blank" class="linkedIn">LinkedIn</a>
+                            <a href="https://www.linkedin.com/in/wesley-alves-225071174/" target="_blank"
+                                class="linkedIn">LinkedIn</a>
                         </li>
                         <li>
                             <a href="https://github.com/wess223" target="_blank" class="github">GitHub</a>
