--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                         </p>
                         <p>
                             Logo mais ingressando em um estágio trabalhando com as
-                            tecnologias microsoft <span>.Net, C#, asp.net MVC e sqlserver.</span>
-                            Com muito esforço e dedicação hoje sigo minha profissão como desenvolvedor full stack.<span>(reactjs, nextjs, react native, .Net, SqlServer.)</span>
-                            
+                            tecnologias microsoft <span>.Net, C#, Asp.net MVC e Sqlserver.</span>
+                            Com muito esforço e dedicação hoje sigo minha profissão como desenvolvedor full stack.<span>(reactjs, nextjs, react native, .net, sqlServer.)</span>
+
                             meus principais hobbies são
                             jogar MMO RPG, tibia e ver animes e séries.
                             <br />
